--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "marvel-heroes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://keliath.github.io",
   "dependencies": {
     "-": "^0.0.1",
     "@emotion/react": "^11.8.2",
@@ -35,7 +36,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
